product_studio_domain_with_vpc.yaml
Resources:
  
  # Policies which can be attached to Studio Users (Data Science personas) 
  ########################################################################

  SageMakerReadOnlyAccessPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: SageMakerReadOnlyAccessPolicy
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Sid: AmazonSageMakerDescribeReadyOnlyPolicy
            Effect: Allow
            Action:
              - sagemaker:Describe*
              - sagemaker:GetSearchSuggestions
            Resource: "*"
          - Sid: AmazonSageMakerListOnlyPolicy
            Effect: Allow
            Action:
              - sagemaker:List*
            Resource: "*"            
          - Sid: AmazonSageMakerUIandMetricsOnlyPolicy
            Effect: Allow
            Action:
              - sagemaker:*App
              - sagemaker:Search
              - sagemaker:RenderUiTemplate
              - sagemaker:BatchGetMetrics
            Resource: "*"
          - Sid: AmazonSageMakerEC2ReadOnlyPolicy
            Effect: Allow
            Action:
              - ec2:DescribeDhcpOptions
              - ec2:DescribeNetworkInterfaces
              - ec2:DescribeRouteTables
              - ec2:DescribeSecurityGroups
              - ec2:DescribeSubnets
              - ec2:DescribeVpcEndpoints
              - ec2:DescribeVpcs
            Resource: "*"
          - Sid: AmazonSageMakerIAMReadOnlyPolicy
            Effect: Allow
            Action:
              - iam:ListRoles
            Resource: "*"

  SageMakerAccessSupportingServicesPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: SageMakerAccessSupportingServicesPolicy
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Sid: AmazonSageMakerCRUDAccessS3Policy
            Effect: Allow
            Action:
              - s3:PutObject
              - s3:GetObject
              - s3:AbortMultipartUpload
              - s3:DeleteObject
              - s3:CreateBucket
              - s3:ListBucket
              - s3:PutBucketCORS
              - s3:ListAllMyBuckets
              - s3:GetBucketCORS
              - s3:GetBucketLocation
            Resource: "*"

  SageMakerDeveloperPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: SageMakerDeveloperPolicy
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Sid: SageMakerStudioCreateApp
            Effect: Allow
            Action:
              - sagemaker:CreateApp
            Resource: "*"
          - Sid: AmazonSageMakerStudioIAMPassRole
            Effect: Allow
            Action:
              - iam:PassRole
            Resource: !GetAtt SageMakerTrainingJobExecutionRole.Arn
            Condition:
              StringEquals:
                iam:PassedToService: sagemaker.amazonaws.com
          - Sid: SageMakerInvokeEndpointRole
            Effect: Allow
            Action:
              - sagemaker:InvokeEndpoint
            Resource: "*"
          - Sid: AmazonSageMakerAddTags
            Effect: Allow
            Action:
              - sagemaker:AddTags
            Resource: "*"
          - Sid: AmazonSageMakerCreate
            Effect: Allow
            Action:
              - sagemaker:Create*
            Resource: "*"
          - Sid: AmazonSageMakerUpdateDeleteExecutePolicy
            Effect: Allow
            Action:
              - sagemaker:Delete*
              - sagemaker:Stop*
              - sagemaker:Update*
              - sagemaker:Start*
              - sagemaker:DisassociateTrialComponent
              - sagemaker:AssociateTrialComponent
              - sagemaker:BatchPutMetrics
            Resource: "*"

  # Execution Roles used by Studio and SageMaker jobs
  ########################################################################

  SageMakerExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: SageMakerExecutionRole
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: 
              Service:
                - sagemaker.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - !Ref SageMakerReadOnlyAccessPolicy
        - !Ref SageMakerAccessSupportingServicesPolicy
        - !Ref SageMakerDeveloperPolicy

  SageMakerTrainingJobExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: SageMakerTrainingJobExecutionRole
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: 
              Service:
                - sagemaker.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: SageMakerTrainingJobPolicy
          PolicyDocument:            
            Version: "2012-10-17"
            Statement:
              - Sid: SageMakerTraingingJobExecutionPolicy
                Effect: Allow
                Action:
                  - cloudwatch:PutMetricData
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                  - logs:CreateLogGroup
                  - logs:DescribeLogStreams
                  - s3:GetObject
                  - s3:PutObject
                  - s3:ListBucket
                  - ecr:GetAuthorizationToken
                  - ecr:BatchCheckLayerAvailability
                  - ecr:GetDownloadUrlForLayer
                  - ecr:BatchGetImage
                Resource: "*"        


  # VPCs and Subnets
  ########################################################################
  
  SageMakerVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.10.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: SageMaker VPC
  
  SageMakerInternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: SageMakerVPC
  
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref SageMakerVPC
      InternetGatewayId: !Ref SageMakerInternetGateway

  SageMakerSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SageMakerVPC
      CidrBlock: 10.10.0.0/16
      AvailabilityZone: !Select [ 0, !GetAZs ]
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value: SageMaker VPC Subnet
    
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SageMakerVPC
  
  InternetRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref RouteTable
      GatewayId: !Ref SageMakerInternetGateway

  SageMakerSubnetRouteAssociation:   
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref SageMakerSubnet
  
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "Internet Group"
      GroupDescription: "SSH traffic in, all traffic out."
      VpcId: !Ref SageMakerVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

  # SageMaker Domain
  ########################################################################

  SageMakerDomain:
    Type: AWS::SageMaker::Domain
    DependsOn: SageMakerSubnetRouteAssociation
    Properties:
      DomainName: SageMaker-Domain
      VpcId: !Ref SageMakerVPC
      SubnetIds:
        - !Ref SageMakerSubnet
      AuthMode: IAM
      DefaultUserSettings:
        ExecutionRole: !GetAtt SageMakerExecutionRole.Arn
